--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -73,7 +73,7 @@ Putting everything together we find
     - (\partial_YF) Y\, (B^{-1})^{Ij} \partial^\mu \phi_j \partial_\nu \phi^I
     - F\,\delta^{\mu}{}_{\nu}.
 \end{align}
-Or raising both indices
+Raising both indices
 \begin{align}
     T^{\mu \nu}
     &= (\partial_YF) u^\mu \partial^\nu \phi^0
@@ -86,14 +86,14 @@ Or raising both indices
     - (\partial_YF) Y\, (B^{-1})^{Ij} \partial^\mu \phi_j \partial^\nu \phi^I
     - F\,\eta^{\mu\nu}.
 \end{align}
-Using the identity (just plug in to check)
+Using the identity ($B_{ij}$ is just the projector on the space orthogonal to \(u^\mu\))
 \begin{align}
     (B^{-1})^{ij}\,\partial^\mu\phi_j\,\partial_\nu\phi^i &= \delta^{\mu}{}_{\nu} + u^\mu u_\nu
 \end{align}
 the stress tensor becomes
 \begin{align}
     T^{\mu\nu}
-    &= (\partial_YF) Y u^\mu \partial^\nu \phi^0
+    &= (\partial_YF) u^\mu \partial^\nu \phi^0
     + (\partial_YF)\partial_\lambda\phi^0\frac{1}{2\sqrt{B}}
     \epsilon^{\lambda\mu\beta\gamma}\,\epsilon_{Ijk}\,
     \partial_\beta\phi^j\,\partial_\gamma\phi^k\,\partial^\nu \phi^I
@@ -101,13 +101,16 @@ the stress tensor becomes
     &+\Big(2B (\partial_BF)- Y(\partial_YF)\Big) (\eta^{\mu\nu} + u^\mu u^\nu)
     - F \eta^{\mu\nu}.
 \end{align}
-
-Decomposing \(\partial_\nu\phi^0 = -Y u_\nu + (\text{part orthogonal to }u_\nu)\), the orthogonal part drops out. 
-The stress tensor reduces to
+Further decomposing \(\partial_\nu\phi^0 = -Y u_\nu + (\text{part orthogonal to }u_\nu)\), the stress tensor reduces to
 \begin{align}
-    T^{\mu}{}_{\nu}
-    &= \bigl(Y\,\partial_Y F - 2B\,\partial_B F\bigr) u^{\mu} u_{\nu}
-       + \bigl(F - 2B\,\partial_B F\bigr)\,\delta^{\mu}{}_{\nu}.
+    T^{\mu\nu}
+    &= (\partial_YF) u^\mu \big[\partial^\nu \phi^0 + Y u^\nu\big]
+    + (\partial_YF)\partial_\lambda\phi^0\frac{1}{2\sqrt{B}}
+    \epsilon^{\lambda\mu\beta\gamma}\,\epsilon_{Ijk}\,
+    \partial_\beta\phi^j\,\partial_\gamma\phi^k\,\partial^\nu \phi^I
+    \\
+    &+\Big(2B (\partial_BF)- Y(\partial_YF) -F\Big) \eta^{\mu\nu}
+    + u^\mu u^\nu 2\Big(B (\partial_BF)- Y(\partial_YF)\Big).
 \end{align}
 We finally get
 \begin{align}
