--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -116,16 +116,16 @@ Matching the expression to that of a perfect fluid
 \begin{equation}
     T_{\mu\nu}=(\rho+p)u_\mu u_\nu + p \eta_{\mu\nu},
 \end{equation}
-and contracting with \(u_\mu u_\nu\) and \(\eta_{\mu\nu}\) we find the energy density and pressure as \questiontag{up to an overeall minus sign I am screwing up}
+and contracting with \(u_\mu u_\nu\) and \(\eta_{\mu\nu}\) we find the energy density and pressure as \questiontag{messed up the minus sign since used flat QFT relation for $T_{\mu\nu}$}
 \begin{equation}
     \rho = Y \partial_YF - F, \qquad
-    p = F - 2 B \partial_BF.
+    p = F + Y \partial_YF - 2 B \partial_BF.
 \end{equation}
 We finally get the expresion
 \begin{align}
     T^{\mu}{}_{\nu}
-    &= \bigl(Y \partial_YF - 2B \partial_BF\bigr) u^{\mu} u_{\nu}
-       + \bigl(F - 2B \partial_BF\bigr)\,\delta^{\mu}{}_{\nu}.
+    &= 2\bigl(Y (\partial_Y\!F) - B (\partial_B\!F)\bigr) u^{\mu} u_{\nu}
+       + \bigl(F + Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,\delta^{\mu}{}_{\nu}.
 \end{align}
 \end{proof}
 
@@ -152,9 +152,9 @@ The invariants are still
 \end{equation}
 The 4-velocity is again explicitly given by
 \begin{equation}
-    u^\mu=\frac{1}{3!\,\,\sqrt{B}}\epsilon_{\mu\alpha\beta\gamma}\,\,\epsilon_{ijk}\,\,\partial^\alpha \phi^i \partial^\beta \phi^j \partial^\gamma \phi^k,
+    u^\lambda=g^{\lambda\mu}\frac{1}{3!\,\,\sqrt{B}}\sqrt{-g}\,\epsilon_{\mu\alpha\beta\gamma}\,\,\epsilon_{ijk}\,\,\partial^\alpha \phi^i \partial^\beta \phi^j \partial^\gamma \phi^k,
 \end{equation}
-where \(\epsilon^{\alpha\beta\gamma\delta}=g^{\lambda\alpha}g^{\mu\beta}g^{\nu\gamma}g^{\rho\delta}{\epsilon}_{\lambda\mu\nu\rho}\) with ${\epsilon}_{\lambda\mu\nu\rho}$ totally antisymmetric Levi--Civita.
+where $\sqrt{-g}\,\,\epsilon_{\mu\alpha\beta\gamma}$ is the volume form (totally antisymmetric Levi--Civita), with $\epsilon_{0123}=+1$.
 %
 \begin{proof}
 For convenience, we temporarily report the explicit computation.
@@ -180,13 +180,26 @@ Up to normalization, the velocity dual is then
     \\
     &= \sqrt{-g}\,\, \epsilon_{\lambda\mu\nu\rho} \,\,\epsilon_{ijk}\,\, \partial^\mu \phi^i \partial^\nu \phi^j \partial^\rho \phi^k.
 \end{align}
-The norm is then
+Using the Levi-Civita \emph{tensor} $\sqrt{-g}\epsilon_{\alpha\beta\gamma\delta}$ (just the volume form) and the $4D$ tensorial identity
+\begin{align}
+    \sqrt{-g}\,\epsilon_{\alpha\beta\gamma\delta}&\,\sqrt{-g}\, \epsilon_{\lambda\mu\nu\rho} \,\,g^{\alpha\lambda} = -3! \,\, g_{\lambda[\alpha} g_{\beta\mu} g_{\nu\rho]}
+    \\
+    &:= -\Big(
+    g_{\beta\mu}\, g_{\gamma\nu}\, g_{\delta\rho}
+  + g_{\beta\nu}\, g_{\gamma\rho}\, g_{\delta\mu}
+  + g_{\beta\rho}\, g_{\gamma\mu}\, g_{\delta\nu}
+  - g_{\beta\mu}\, g_{\gamma\rho}\, g_{\delta\nu}
+  - g_{\beta\nu}\, g_{\gamma\mu}\, g_{\delta\rho}
+  - g_{\beta\rho}\, g_{\gamma\nu}\, g_{\delta\mu}
+\Big).
+\end{align}
+The (negative) norm is then
 \begin{align}
     \tilde{u}_\alpha \,g^{\alpha\lambda}\, \tilde{u}_\lambda
-    &= \left(\sqrt{-g}\right)^2 \underbrace{\,g^{\alpha\lambda}\,\,\epsilon_{\alpha\beta\gamma\delta}\,\, \epsilon_{\lambda\mu\nu\rho}}_{=3!\,\,g_{\mu\beta}\,g_{\nu\gamma}\,g_{\rho\delta}}\,\, \underbrace{\epsilon_{ijk}\,\, \epsilon_{pqr}}_{=3!\,\,\delta_p^1\,\delta_q^2\,\delta_r^3\,\,\epsilon_{ijk}} \,\, \partial^\beta \phi^i \partial^\gamma \phi^j \partial^\delta \phi^k \,\,\, \partial^\mu \phi^p \partial^\nu \phi^q \partial^\rho \phi^r 
+    &= \underbrace{\left(\sqrt{-g}\right)^2 \,g^{\alpha\lambda}\,\,\epsilon_{\alpha\beta\gamma\delta}\,\, \epsilon_{\lambda\mu\nu\rho}}_{=-3! \,\, g_{\lambda[\alpha} g_{\beta\mu} g_{\nu\rho]}}\,\, \underbrace{\epsilon_{ijk}\,\, \epsilon_{pqr}}_{=3!\,\,\delta_p^1\,\delta_q^2\,\delta_r^3\,\,\epsilon_{ijk}} \,\, \partial^\beta \phi^i \partial^\gamma \phi^j \partial^\delta \phi^k \,\,\, \partial^\mu \phi^p \partial^\nu \phi^q \partial^\rho \phi^r 
     \\
     &=
-    \left(\sqrt{-g}\right)^2\,\, (3!)^2 \,\, \epsilon_{ijk}\,\,\partial_\mu\phi^1\partial^\mu\phi^i\,\,\partial_\nu\phi^2\partial^\nu\phi^j\,\,\partial_\rho\phi^3\partial^\rho\phi^k  = \left(\sqrt{-g}\right)^2\,\, (3!)^2 \det B^{ij}.
+   \, -(3!)^2 \,\, \epsilon_{ijk}\,\,\partial_\mu\phi^1\partial^\mu\phi^i\,\,\partial_\nu\phi^2\partial^\nu\phi^j\,\,\partial_\rho\phi^3\partial^\rho\phi^k  = - (3!)^2 \det B^{ij}.
 \end{align}
 Raising the index of $\tilde{u}$ and normalizing gives the claimed expression.
 \end{proof}
@@ -199,10 +212,14 @@ The action is $S=S_{\mathrm{EH}}+S_{\mathrm{fluid}}$ with
 where$F$ is an arbitrary function, and we included a possible cosmological constant.
 The energy-momentum tensor is obtained by varying wrt the metric \answertag{And we avoid issues with symmetrizing}
 \begin{align}
-    T_{\mu\nu}=-\frac{2}{\sqrt{-g}}\frac{\delta S_{\mathrm{fluid}}}{\delta g^{\mu\nu}}={\color{red} \bigl(Y\,F_Y - 2B\,F_B\bigr)\,u_\mu u_\nu
-           + \bigl(F - 2B\,F_B\bigr)\,g_{\mu\nu}}\,.
+    T_{\mu\nu}=-\frac{2}{\sqrt{-g}}\frac{\delta S_{\mathrm{fluid}}}{\delta g^{\mu\nu}}={\color{red} \bigl(Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,u_\mu u_\nu
+           + \bigl(F + Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,g_{\mu\nu}}\,.
 \end{align}
-\todotag{Just a guess it is this, finish il conto below}
+That is \todotag{Just a guess it is this, finish il conto below}
+\begin{align}
+     \rho = Y (\partial_Y\!F) - F, \qquad
+    p = F+Y (\partial_Y\!F) - 2 B (\partial_B\!F).
+\end{align}
 %
 \begin{proof}
 We temporarily report the explicit computation, eventually we will cut it out.
@@ -224,27 +241,33 @@ For the variation of \(Y\) we have
 {\small
 \begin{align}
     \delta Y
-    &= \delta\left(u^\alpha \partial_\alpha \phi^0\right)
-    = (\delta u^\alpha) \partial_\alpha \phi^0
+    &= \delta\left(u_\lambda g^{\alpha\lambda} \partial_\alpha \phi^0\right)
     \\
-     &= -\left(u^\theta \partial_\theta \phi^0\right)\frac{1}{2}B^{-1}\, \delta B
-     +\partial_\alpha\phi^0\,\,\frac{1}{3!\,\,\sqrt{B}}\epsilon_{\lambda\mu\nu\rho}\,\,\epsilon_{ijk}\,\,\partial_\beta \phi^i \partial_\gamma \phi^j \partial_\delta \phi^k 
-     \,\,\delta\left(g^{\alpha\lambda}g^{\beta\mu}g^{\gamma\nu}g^{\delta\rho}\right)
+     &= \left(u_\lambda \partial_\alpha \phi^0\right)\,\delta g^{\alpha\lambda}-\left(u^\theta \partial_\theta \phi^0\right)\frac{1}{2}B^{-1}\, \delta B
+     + \partial_\alpha\phi^0\,g^{\alpha\lambda}\,\frac{1}{3!\,\,\sqrt{B}}\big(\delta\sqrt{-g}\big)\,\epsilon_{\lambda\mu\nu\rho}\,\,\epsilon_{ijk}\,\,\partial_\beta \phi^i \partial_\gamma \phi^j \partial_\delta \phi^k 
+     \,g^{\beta\mu}g^{\gamma\nu}g^{\delta\rho}
      \\
-     &=-\frac{Y}{2} \left\{g_{\mu\nu}+u_\mu u_\nu\right\}\,\delta g^{\mu\nu} + \left\{\partial_\alpha\phi^0\,\, u_\lambda \right\} \delta g^{\alpha\lambda}
-     + 
-     \partial_\alpha\phi^0\,\,\frac{1}{3!\,\,\sqrt{B}}\epsilon_{\lambda\mu\nu\rho}\,\,\epsilon_{ijk}\,\,\partial_\beta \phi^i \partial_\gamma \phi^j \partial_\delta \phi^k 
-     \,\,g^{\alpha\lambda}\,\,\,\delta\left(g^{\beta\mu}g^{\gamma\nu}g^{\delta\rho}\right).
+     &\quad
+     +\partial_\alpha\phi^0\,g^{\alpha\lambda}\,\frac{1}{3!\,\,\sqrt{B}}\sqrt{-g}\,\epsilon_{\lambda\mu\nu\rho}\,\,\epsilon_{ijk}\,\,\partial_\beta \phi^i \partial_\gamma \phi^j \partial_\delta \phi^k 
+     \,\,\delta\left(g^{\beta\mu}g^{\gamma\nu}g^{\delta\rho}\right)
+     \\
+     &= \left\{\partial_\alpha\phi^0\,\, u_\lambda \right\} \delta g^{\alpha\lambda}
+     -\frac{Y}{2} \left\{g_{\mu\nu}+u_\mu u_\nu\right\}\,\delta g^{\mu\nu}
+     -\frac{Y}{2} g_{\mu\nu}\,\delta g^{\mu\nu}
+     \\
+     &\quad
+     +\partial_\alpha\phi^0\,g^{\alpha\lambda}\,\frac{1}{3!\,\,\sqrt{B}}\sqrt{-g}\,\epsilon_{\lambda\mu\nu\rho}\,\,\epsilon_{ijk}\,\,\partial_\beta \phi^i \partial_\gamma \phi^j \partial_\delta \phi^k 
+     \,\,\delta\left(g^{\beta\mu}g^{\gamma\nu}g^{\delta\rho}\right)
 \end{align}
 }
 Splitting $\partial_\alpha\phi^0= -Y u_\alpha + \left[\partial_\alpha\phi^0 + Y u_\alpha\right]$ into parts parallel and orthogonal to $u_\alpha$, we get \todotag{Check 2nd term indeeed cancels}
 \begin{align}
     \delta Y
-     &=-\frac{Y}{2} \left\{g_{\mu\nu}+ 3 u_\mu u_\nu\right\}\,\delta g^{\mu\nu}
+     &=-\frac{Y}{2} \left\{2g_{\mu\nu}+ 3 u_\mu u_\nu\right\}\,\delta g^{\mu\nu}
      \\
      &\quad + \underbrace{\left\{\left[\partial_\alpha\phi^0 + Y u_\alpha\right]\,\, u_\lambda \right\} \delta g^{\alpha\lambda}
      + 
-     \partial_\alpha\phi^0\,\,\frac{1}{3!\,\,\sqrt{B}}\epsilon_{\lambda\mu\nu\rho}\,\,\epsilon_{ijk}\,\,\partial_\beta \phi^i \partial_\gamma \phi^j \partial_\delta \phi^k 
+     \partial_\alpha\phi^0\,\,\frac{1}{3!\,\,\sqrt{B}}\sqrt{-g}\,\,\epsilon_{\lambda\mu\nu\rho}\,\,\epsilon_{ijk}\,\,\partial_\beta \phi^i \partial_\gamma \phi^j \partial_\delta \phi^k 
      \,\,g^{\alpha\lambda}\,\,\,\delta\left(g^{\beta\mu}g^{\gamma\nu}g^{\delta\rho}\right)}_{\text{likely to be total derivative or vanish by orthogonality}}.
 \end{align}
 Putting everything together we find
@@ -252,7 +275,7 @@ Putting everything together we find
     \delta S_{\mathrm{fluid}}
     &= \int d^4x \sqrt{-g} \bigg\{
     -\frac{1}{2} g_{\mu\nu} F
-    + (\partial_BF)\, B \left(g_{\mu\nu}+u_\mu u_\nu\right) - (\partial_YF)\, \frac{Y}{2} \left(g_{\mu\nu}+ 3 \,\,u_\mu u_\nu\right)
+    + (\partial_BF)\, B \left(g_{\mu\nu}+u_\mu u_\nu\right) - (\partial_YF)\, \frac{Y}{2} \left(2g_{\mu\nu}+ 3 \,\,u_\mu u_\nu\right)
     \\
     &\qquad
     +\partial_YF\,\Big(\text{total derivative? hopefully yes}\Big)\bigg\} \delta g^{\mu\nu}.
@@ -260,15 +283,19 @@ Putting everything together we find
 From which we read off
 \begin{align}
     T_{\mu\nu}
-    = -2 \frac{1}{\sqrt{-g}} \frac{\delta S_{\mathrm{fluid}}}{\delta g^{\mu\nu}}
+    &= -2 \frac{1}{\sqrt{-g}} \frac{\delta S_{\mathrm{fluid}}}{\delta g^{\mu\nu}}
     %
     =g_{\mu\nu} F
-    -2 (\partial_BF)\, B \left(g_{\mu\nu}+u_\mu u_\nu\right) + (\partial_YF)\, Y \left(g_{\mu\nu}+ 3 \,\,u_\mu u_\nu\right).
+    -2 (\partial_BF)\, B \left(g_{\mu\nu}+u_\mu u_\nu\right) + (\partial_YF)\, Y \underbrace{\left(2g_{\mu\nu}+ 3 \,\,u_\mu u_\nu\right)}_{\textcolor{red}{\text{should be g+2uu}}}
+    \\
+    &=
+    \bigl(3Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,u_\mu u_\nu
+           + \bigl(F + 2Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,g_{\mu\nu}.
 \end{align}
-Matching to the perfect fluid expression $T_{\mu\nu}=(\rho+p)u_\mu u_\nu + p g_{\mu\nu}$ we find
+Matching to the perfect fluid expression $T_{\mu\nu}=(\rho+p)u_\mu u_\nu + p g_{\mu\nu}$ we find again
 \begin{equation}
-    \rho = Y \partial_YF - F, \qquad
-    p = F - 2 B \partial_BF.
+    \rho = Y (\partial_Y\!F) - F, \qquad
+    p = F+2Y (\partial_Y\!F) - 2 B (\partial_B\!F).
 \end{equation}
 \end{proof}
 
