--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -234,7 +234,7 @@ Varying the action we have
 \end{align}
 We have
 \begin{equation}
-    \delta \sqrt{-g} = -\frac{1}{2}\, g_{\mu\nu}\,\sqrt{-g}\,\, \delta g^{\mu\nu},
+    \delta \sqrt{-g} = \frac{1}{2}\, g_{\mu\nu}\,\sqrt{-g}\,\, \delta g^{\mu\nu},
 \end{equation}
 Using the relation $(B^{-1})^{ij} \partial_\mu\phi^i\,\partial_\nu\phi^j=g_{\mu\nu}+u_\mu u_\nu$ (just projection onto $u_\mu$ orthogonal space) we find
 \begin{align}
@@ -257,32 +257,28 @@ For the variation of \(Y\) we have
      \\
      &= \left\{\partial_\alpha\phi^0\,\, u_\lambda \right\} \delta g^{\alpha\lambda}
      -\frac{Y}{2} \left\{g_{\mu\nu}+u_\mu u_\nu\right\}\,\delta g^{\mu\nu}
-     -\frac{Y}{2} g_{\mu\nu}\,\delta g^{\mu\nu}
+     +\frac{Y}{2} g_{\mu\nu}\,\delta g^{\mu\nu}
      \\
      &\quad
      +\partial_\alpha\phi^0\,g^{\alpha\lambda}\,\frac{1}{3!\,\,\sqrt{B}}\sqrt{-g}\,\epsilon_{\lambda\mu\nu\rho}\,\,\epsilon_{ijk}\,\,\partial_\beta \phi^i \partial_\gamma \phi^j \partial_\delta \phi^k 
      \,\,\delta\left(g^{\beta\mu}g^{\gamma\nu}g^{\delta\rho}\right)
+     \\
+     &= -\frac{Y}{2} u_\mu u_\nu\,\,\delta g^{\mu\nu}
+     +\underbrace{\frac{1}{3!\,\,\sqrt{B}}\sqrt{-g}\,\epsilon_{\lambda\mu\nu\rho}\,\,\epsilon_{ijk}\,\,\partial_\alpha\phi^0\,\,\partial_\beta \phi^i\,\, \partial_\gamma \phi^j\,\, \partial_\delta \phi^k 
+     \,\,\delta\left(g^{\alpha\lambda}g^{\beta\mu}g^{\gamma\nu}g^{\delta\rho}\right)}_{=0 \,\text{by antisymmetry or orthogonality or total derivative?}}
 \end{align}
 }
-Splitting $\partial_\alpha\phi^0= -Y u_\alpha + \left[\partial_\alpha\phi^0 + Y u_\alpha\right]$ into parts parallel and orthogonal to $u_\alpha$, we get \todotag{Check 2nd term indeeed cancels}
-\begin{align}
-    \delta Y
-     &=-\frac{Y}{2} \left\{2g_{\mu\nu}+ 3 u_\mu u_\nu\right\}\,\delta g^{\mu\nu}
-     \\
-     &\quad + \underbrace{\left\{\left[\partial_\alpha\phi^0 + Y u_\alpha\right]\,\, u_\lambda \right\} \delta g^{\alpha\lambda}
-     + 
-     \partial_\alpha\phi^0\,\,\frac{1}{3!\,\,\sqrt{B}}\sqrt{-g}\,\,\epsilon_{\lambda\mu\nu\rho}\,\,\epsilon_{ijk}\,\,\partial_\beta \phi^i \partial_\gamma \phi^j \partial_\delta \phi^k 
-     \,\,g^{\alpha\lambda}\,\,\,\delta\left(g^{\beta\mu}g^{\gamma\nu}g^{\delta\rho}\right)}_{\text{likely to be total derivative or vanish by orthogonality}}.
-\end{align}
+Splitting $\partial_\alpha\phi^0= -Y u_\alpha + \left[\partial_\alpha\phi^0 + Y u_\alpha\right]$ might also be useful to compute the variation... In any case let's pretend the last term can be neglected.
+
 Putting everything together we find
 \begin{align}
     \delta S_{\mathrm{fluid}}
     &= \int d^4x \sqrt{-g} \bigg\{
     -\frac{1}{2} g_{\mu\nu} F
-    + (\partial_BF)\, B \left(g_{\mu\nu}+u_\mu u_\nu\right) - (\partial_YF)\, \frac{Y}{2} \left(2g_{\mu\nu}+ 3 \,\,u_\mu u_\nu\right)
+    + (\partial_BF)\, B \left(g_{\mu\nu}+u_\mu u_\nu\right) - (\partial_YF)\, \frac{1}{2} Y \left(u_\mu u_\nu\right)
     \\
     &\qquad
-    +\partial_YF\,\Big(\text{total derivative? hopefully yes}\Big)\bigg\} \delta g^{\mu\nu}.
+    +\partial_YF\,\Big(\text{total derivative or vanishing term}\Big)\bigg\} \delta g^{\mu\nu}.
 \end{align}
 From which we read off
 \begin{align}
@@ -290,16 +286,16 @@ From which we read off
     &= -2 \frac{1}{\sqrt{-g}} \frac{\delta S_{\mathrm{fluid}}}{\delta g^{\mu\nu}}
     %
     =g_{\mu\nu} F
-    -2 (\partial_BF)\, B \left(g_{\mu\nu}+u_\mu u_\nu\right) + (\partial_YF)\, Y \underbrace{\left(2g_{\mu\nu}+ 3 \,\,u_\mu u_\nu\right)}_{\textcolor{red}{\text{should be g+2uu}}}
+    -2 (\partial_BF)\, B \left(g_{\mu\nu}+u_\mu u_\nu\right) + (\partial_YF)\, Y \,u_\mu u_\nu
     \\
     &=
-    \bigl(3Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,u_\mu u_\nu
-           + \bigl(F + 2Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,g_{\mu\nu}.
+    \bigl(Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,u_\mu u_\nu
+           + \bigl(F - 2 B (\partial_B\!F)\bigr)\,g_{\mu\nu}.
 \end{align}
-Matching to the perfect fluid expression $T_{\mu\nu}=(\rho+p)u_\mu u_\nu + p g_{\mu\nu}$ we find again
+Matching to the perfect fluid expression $T_{\mu\nu}=(\rho+p)u_\mu u_\nu + p g_{\mu\nu}$ we find the expression in \cite{} (ballesteros)\footnote{Note that Ballesteros et al. use b=$\sqrt{B}$ and $F(b,Y)$, so that $\partial_b F = 2 \sqrt{B} \partial_B F$.}
 \begin{equation}
     \rho = Y (\partial_Y\!F) - F, \qquad
-    p = F+2Y (\partial_Y\!F) - 2 B (\partial_B\!F).
+    p = F - 2 B (\partial_B\!F).
 \end{equation}
 \end{proof}
 
