--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -216,13 +216,13 @@ The action is $S=S_{\mathrm{EH}}+S_{\mathrm{fluid}}$ with
 where $F$ is an arbitrary function, and we included a possible cosmological constant.
 The energy-momentum tensor is obtained varying wrt the metric \answertag{Avoid need to symmetrize}
 \begin{align}
-    T_{\mu\nu}:=-\frac{2}{\sqrt{-g}}\frac{\delta S_{\mathrm{fluid}}}{\delta g^{\mu\nu}}={\color{red} \bigl(3Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,u_\mu u_\nu
-           + \bigl(F + 2Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,g_{\mu\nu}}\,.
+    T_{\mu\nu}:=-\frac{2}{\sqrt{-g}}\frac{\delta S_{\mathrm{fluid}}}{\delta g^{\mu\nu}}={ \bigl(Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,u_\mu u_\nu
+           + \bigl(F  - 2 B (\partial_B\!F)\bigr)\,g_{\mu\nu}}\,.
 \end{align}
-That is, matching to the perfect fluid expression, \todotag{Does not match flat case... check!}
+That is, matching to the perfect fluid expression, we get the expressions from \cite{} \todotag{Does not match flat case... check it back!}
 \begin{align}
      \rho = Y (\partial_Y\!F) - F, \qquad
-    p = F+ 2 Y (\partial_Y\!F) - 2 B (\partial_B\!F).
+    p = F - 2 B (\partial_B\!F).
 \end{align}
 %
 \begin{proof}
