--- a/other/paperpile.bib
+++ b/other/paperpile.bib
@@ -2729,7 +2729,7 @@
   abstract      = "The low-energy dynamics of relativistic continuous media is
                    given by a shift-symmetric effective theory of four scalar
                    fields. These scalars describe the embedding in spacetime of
-                   the medium and play the role of St\"uckelberg fields for
+                   the medium and play the role of Stuckelberg fields for
                    spontaneously broken spatial and time translations. Perfect
                    fluids are selected imposing a stronger symmetry group or
                    reducing the field content to a single scalar. We explore the
