--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -562,7 +562,7 @@ Then we have
 \end{align}
 and
 \begin{align}
-    c_s^2 &= \frac{b^2\partial_b^2 F -\frac{\left(bY\partial_{bY}^2F-Y\partial_YF\right)^2}{Y^2\partial_Y^2F}}{b\partial_b F - Y \partial_Y F}.
+    c_s^2 &= \frac{b^2\partial_b^2 F -\frac{\left(bY\partial_{bY}^2F-Y\partial_YF\right)^2}{Y^2\partial_Y^2F}}{b\partial_b F - Y \partial_Y F}, \qquad w:=\frac{p}{\rho}=\frac{F - b (\partial_b F)}{Y (\partial_Y F) - F}.
 \end{align}
 
 %----------------------------------------------------------------
